Added links to the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,6 @@
 	<a href="#top" class="back-to-top"><span class="screenreader">up</span></a>
 	<footer class="site-footer">
-		{{ site.title }} / 20{{ site.time | date: '%y' }}
+		<span>{{ site.title }} / 20{{ site.time | date: '%y' }}</span>
+		<a href="http://2015.michele.nl">Blog</a>
+		<a href="https://github.com/MicheleNL/2016-website/issues">Report Bug</a>
 	</footer>
