--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -95,11 +95,19 @@ h1, h2, h3, h4, h5, h6,
 // use jeremy keith's greek alphabet solution
 h1,
 .alpha {
-	font-size: 4.2em;
+	font-family: $font-sans-serif-black;
+	font-size: 3.6em;
 	line-height: 1;
 	margin-top: 0; 
 	margin-bottom: 0;
-	font-family: $font-sans-serif-black;
+
+	@include breakpoint(sm){
+		font-size: 4.2em;
+	}
+
+	@include breakpoint(lg){
+		font-size: 4.5em;
+	}
 }
 
 h2, 
