--- a/_sass/_helpers.scss
+++ b/_sass/_helpers.scss
@@ -62,22 +62,23 @@ $breakpoint-sm:		30em;
 // mixin for slide up animation
 @mixin slide-up($offset, $duration, $delay) {
 	
-	opacity: 0;
-	transform: translate3d(0, $offset, 0);
-	will-change: transform, opacity;
+	.cssanimations &,
+	.js & {
+		opacity: 0;
+		transform: translate3d(0, $offset, 0);
+		will-change: transform, opacity;
 
-	@keyframes slide-up{
-		0% 		{ transform: translate3d(0, $offset, 0); opacity: 0; }
-		100%	{ transform: none; opacity: 1; }
-	}
-	&.animate {
-		animation: slide-up $duration $delay both cubic-bezier(.4,0,.2,1);		  
+		@keyframes slide-up{
+			0% 		{ transform: translate3d(0, $offset, 0); opacity: 0; }
+			100%	{ transform: none; opacity: 1; }
+		}
+		&.animate {
+			animation: slide-up $duration $delay both cubic-bezier(.4,0,.2,1);		  
+		}
 	}
 }
 
 // usage:  @include slide-up(100%, 0.4s, 0.1s);
-
-
 
 // mixin for relative padding
 @mixin responsive-padding {
