--- a/_sass/_instafeed.scss
+++ b/_sass/_instafeed.scss
@@ -4,6 +4,10 @@
 	position: relative;
 	float: left;
 	@include slide-up(50%, 0.9s, 0.1s);
+
+	.no-js & {
+		display: none;
+	}
 }
 
 .instagram-feed a {
