--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js">
 	{% include head.html %}
 	<body class="{{ page.body_class }}">
 	{% include header.html %}
 	{{ content }}
 	{% include footer.html %}
-		<script src="{{ '/assets/js/scripts.js' | prepend: site.baseurl }}"></script>
+		<script src="{{ '/assets/js/scripts.js' | prepend: site.baseurl }}?{{ site.time | date: '%s' }}"></script>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
