--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,6 @@
 	<meta http-equiv="cleartype" content="on">
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}?{{ site.time | date: '%s' }}">
  	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
- 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+ 	<link rel="alternate" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }} type="application/rss+xml" title="{{ site.title }}" ">
 	<link rel="shortcut icon" href="{{ "/favicon.ico" | prepend: site.baseurl }}" >
 </head>
