--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js">
 	{% include head.html %}
-	<body class="{{ page.body_class }}">
+	<body>
 	{% include header.html %}
 	{{ content }}
 	{% include footer.html %}
