--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -144,7 +144,7 @@ h5,
 
 p, ul, ol, pre, table, blockquote {
 	margin-top: 0;
-	margin-bottom: 1.6em;
+	margin-bottom: 2rem;
 }
 
 b, strong, em, small, code {
