--- a/_sass/_image-container.scss
+++ b/_sass/_image-container.scss
@@ -5,14 +5,13 @@
 	position: relative;
 	
 	img  {
-		width: 100%;
 		opacity: 0;
-		will-change: opacity;
-		
-		&.animate {
-			transition: all 1.1s 0.1s ease;
-			opacity: 1;
-		}
+		width: 100%;	
+	}
+
+	&.animate img {
+		transition: all 1.1s ease;
+		opacity: 1;
 	}
 
 	+ h2, 
@@ -33,14 +32,12 @@ p {
 
 // image container to break out margins
 .image-container {
-	transition: margin 0.15s ease-out;
 	margin: 0;
 	position: relative;
 
 	@include breakpoint(sm) {
 		margin-left: -$gutter-sm;  
 		margin-right: -$gutter-sm; 
-		transition: margin 0.15s ease-in;
 	}
 
 	@include breakpoint(md) {
@@ -50,7 +47,7 @@ p {
 }
 
 // colored image frame behind img 
-.img-frame {
+.image-frame {
 	background: $brand-color; 
 	margin: 0.32em 0;
 
@@ -92,6 +89,5 @@ p {
 			border-left: 0.09rem solid;
 			height: 100%;
 		}
-
 	}	
 }
