Changed some colors

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,7 +5,7 @@ $teal: 			#00ffd5;
 $pink:			#ffc8c5;
 $blue-alice:		#b1c2e2;
 $blue-steel:		#89b7c6;
-$blue:			#130177;
+$blue:			#2c3877;
 $gray-lighter:		#eee;
 $gray-light:		#d5d5d5;
 $gray:			#c1c1c1;
