Some accessibility optimizations

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,7 +9,7 @@ $blue:			#2c3877;
 $gray-lighter:		#eee;
 $gray-light:		#d5d5d5;
 $gray:			#c1c1c1;
-$gray-dark:		#2a2931;
+$gray-dark:		#555;
 $gray-darker:		#181920;
 
 // color usage
