--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html lang="nl" class="no-js">
 	{% include head.html %}
 	<body>
 	{% include header.html %}
