--- a/_sass/_social-media-list.scss
+++ b/_sass/_social-media-list.scss
@@ -10,43 +10,37 @@
 
 	a {	
 		position: relative;
-		display: block;
-		color: $text-color;
-		border-radius: 1.25em;
-		border: 0.09rem solid $text-color;
-		height: 2.5em;
-		width: 2.5em;
-		padding: 0;
-		background: white;
-		margin: 0.3em;
-		transition: border 0.3s ease-out;
 		display: flex;
 		align-items: center;
-		transition: all 0.4s;
-		transform: translate3d(0,0,0);
+		height: 2.5em;
+		width: 2.5em;
+		background: white;
+		color: $text-color;
+		margin: 0.3em;
+		padding: 0;
+		border: 0.09rem solid $text-color;
+		border-radius: 1.25em;
 		cursor: pointer;
 		will-change: transform, color;
 
 		&:before {
 			content: "";
 			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate3d(-50%, -50%, 0);
-			width: 0;
-			height: 0;
-			margin: 0;
+			width: 100%;
+			height: 100%;
 			border-radius: 50%;
 			background: $text-color;
+			opacity: 0;
 		}
 
 		@include hocus {
 			color: white;
-			transition: color 0.15s, transform 0.15s;	
+			transition: color 0.15s 0.1s, transform 0.15s;	
 			
 			&:before {
-				width: 100%;
-				height: 100%;
+				opacity: 1;	
+				transform: translateY(0);
+				transition: opacity 0.4s;	
 			}
 		}
 	}
