--- a/_sass/_instafeed.scss
+++ b/_sass/_instafeed.scss
@@ -42,7 +42,7 @@
 		z-index: 777;
 		pointer-events: none;
 		opacity: 0;
-		transition: letter-spacing 0s linear, opacity 0.6s ease-out;
+		transition: letter-spacing 0s 1s linear, opacity 0.3s ease-out;
 	}
 
 	@include hocus {
