--- a/_sass/_block-item.scss
+++ b/_sass/_block-item.scss
@@ -12,7 +12,7 @@
 	// overlay effect on hover
 	@include hocus {
 		.block-item-img {
-			filter: none;	
+			filter: grayscale(0) contrast(1.3) saturate(120%);	
 			transition-timing-function: ease-out;
 		}
 
