Made items screen reader friendly

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-	<a href="#top" class="back-to-top"><span class="screenreader">up</span></a>
+	<a href="#top" class="back-to-top"><span class="screenreader">Laat de pagina weer naar boven scrollen</span></a>
 	<footer class="site-footer">
-		<span>{{ site.title }} / 20{{ site.time | date: '%y' }}</span>
-		<a href="http://2015.michele.nl">Blog</a>
-		<a href="https://github.com/MicheleNL/2016-website/issues">Report Bug</a>
+		<span aria-hidden="true">{{ site.title }} / 20{{ site.time | date: '%y' }}</span>
+		<a href="http://2015.michele.nl" aria-label="Bezoek het blog van Michèle">Blog</a>
+		<a href="https://github.com/MicheleNL/2016-website/issues" aria-label="Meld een bug op GitHub">Report Bug</a>
 	</footer>
