--- a/_sass/_instafeed.scss
+++ b/_sass/_instafeed.scss
@@ -43,14 +43,14 @@
 		pointer-events: none;
 		opacity: 0;
 		transition: letter-spacing 0s 0.35s linear, opacity 0.3s ease-out;
+		visibility: hidden; // hide from screenreader
 	}
-
-	@include hocus {
-		&:after {
-			opacity: 1;
-			letter-spacing: 0.25em;
-			transition: letter-spacing 0.35s cubic-bezier(0.5, -0.5, 0.1, 2.2), opacity 0.5s ease;
-		}
+	
+	&:hover:after {
+		visibility: visible; // show again
+		opacity: 1;
+		letter-spacing: 0.25em;
+		transition: letter-spacing 0.35s cubic-bezier(0.5, -0.5, 0.1, 2.2), opacity 0.5s ease;
 	}
 	
 	// different positioning based on screen width
