--- a/_sass/_page-contact.scss
+++ b/_sass/_page-contact.scss
@@ -1,5 +1,11 @@
 /* The Contact page
 ------------------------------*/
+.contact h1 {
+	@include breakpoint(xl){
+		font-size: 5.3em;
+	}
+}
+
 .contact .col {
 	display: flex;
 	flex-wrap: wrap;
