First version of Jekyll with Gulp

--- a/_sass/utilities/_mixins.scss
+++ b/_sass/utilities/_mixins.scss
@@ -1,28 +1,5 @@
-/* Helpers: placeholders
+/* Mixins
 ---------------------------------*/
-
-// clearfix
-%clearfix {
-	&:after {
-		content: "";
-		display: table;
-		clear: both;
-	}
-}
-
-// screenreader text
-.screenreader {
-	position: absolute;
-	left: -10000px;
-	top: auto;
-	width: 1px;
-	height: 1px;
-	overflow: hidden;
-}
-
-/* Helpers: mixins
----------------------------------*/
-
 // mixin for automatically including focus styles with hover
 @mixin hocus {
 	&:hover,
