--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 	{% include header.html %}
 	{{ content }}
 	{% include footer.html %}
-		<script async src="{{ '/assets/js/scripts.js' | prepend: site.baseurl }}?{{ site.time | date: '%s' }}"></script>
+		<script async src="{{ '/js/scripts.js' | prepend: site.baseurl }}?{{ site.time | date: '%s' }}"></script>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
