--- a/_sass/modules/_instafeed.scss
+++ b/_sass/modules/_instafeed.scss
@@ -10,7 +10,7 @@
 	}
 }
 
-.instagram-feed a {
+.instagram-feed > a {
 	position: relative;
 	float: left;
 	width: 50%;
@@ -43,11 +43,9 @@
 		pointer-events: none;
 		opacity: 0;
 		transition: letter-spacing 0s 0.35s linear, opacity 0.3s ease-out;
-		visibility: hidden; // hide from screenreader
 	}
-	
+
 	&:hover:after {
-		visibility: visible; // show again
 		opacity: 1;
 		letter-spacing: 0.25em;
 		transition: letter-spacing 0.35s cubic-bezier(0.5, -0.5, 0.1, 2.2), opacity 0.5s ease;
