Some layout refactoring

--- a/_sass/base/_base-vars.scss
+++ b/_sass/base/_base-vars.scss
@@ -1,16 +1,15 @@
 /* Variables
 ---------------------------------*/
 // color palette
-$teal: 			#00ffd5;
-$pink:			#ffc8c5;
-$blue-alice:		#b1c2e2;
-$blue-steel:		#89b7c6;
-$blue:			#2c3877;
-$gray-lighter:		#eee;
-$gray-light:		#d5d5d5;
-$gray:			#c1c1c1;
-$gray-dark:		#555;
-$gray-darker:		#181920;
+$teal: 			#b2f6eb;
+$pink:			#ffdcd0;
+$blue:			#1F2677;
+$blue-soft:			#415892;
+$gray-lighter:		#e6e9ed;
+$gray-light:		#D5D5E5;
+$gray:			#C1C1D0;
+$gray-dark:		#555566;
+$gray-darker:		#181931;
 
 // color usage
 $bg-color:		#fff;
