--- a/_sass/modules/_page-about.scss
+++ b/_sass/modules/_page-about.scss
@@ -2,7 +2,7 @@
 ------------------------------*/
 .about {
 	section .col:first-child {
-		background: $text-color;
+		background: $blue-soft;
 		color: white;
 	}
 
