--- a/_sass/modules/_page-cv.scss
+++ b/_sass/modules/_page-cv.scss
@@ -4,7 +4,7 @@
 // generic cv section settings
 .cv-section {
 	> header {
-		background-color: $text-color;
+		background-color: $blue-soft;
 		color: white;	
 	}
 
