--- a/_sass/modules/_page-cv.scss
+++ b/_sass/modules/_page-cv.scss
@@ -11,6 +11,21 @@
 	.col {
 		@include responsive-padding();
 	}
+	
+	// needs min-height to show image
+	header.block-item-img {
+		min-height: 18em;
+		align-items: flex-end;
+			
+		@include breakpoint(sm){
+			min-height: 30em;
+		}
+
+		@include breakpoint(md){
+			min-height: 0;
+			align-items: center;
+		}
+	}
 
 	@include hocus {
 		header.block-item-img {
