Updated off-screen accessible text

--- a/_sass/utilities/_helpers.scss
+++ b/_sass/utilities/_helpers.scss
@@ -12,10 +12,11 @@
 
 // screenreader text
 .screenreader {
-	position: absolute;
-	left: -10000px;
-	top: auto;
+	clip: rect(1px 1px 1px 1px); /* IE 6/7 */
+	clip: rect(1px, 1px, 1px, 1px);
 	width: 1px;
 	height: 1px;
 	overflow: hidden;
+	position: absolute;
+	white-space: nowrap; /* added line */
 }
