--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -25,9 +25,9 @@ img {
 	vertical-align: middle;
 }
 
-::selection { 
+::selection {
 	background: $blue-soft;
-	color: $white; 
+	color: $white;
 }
 
 // typography
@@ -51,6 +51,7 @@ h1, h2, h3, h4, h5, h6,
 .alpha, .beta, .gamma, .delta, .epsilon {
 	font-family: $heading-font-family;
 	font-weight: normal;
+	width: 100%;
 }
 
 // use jeremy keith's greek alphabet solution
@@ -59,13 +60,13 @@ h1,
 	font-family: $font-sans-serif-black;
 	font-size: 3.6em;
 	line-height: 1;
-	margin-top: 0; 
+	margin-top: 0;
 	margin-bottom: 0;
 
 	@include breakpoint(sm){
 		font-size: 4.2em;
 	}
-	
+
 	@include breakpoint(md){
 		font-size: 4.5em;
 	}
@@ -75,7 +76,7 @@ h1,
 	}
 }
 
-h2, 
+h2,
 .beta {
 	font-size: 1.7em;
 	line-height: 1;
@@ -83,7 +84,7 @@ h2,
 	margin-bottom: 0.627450980392157em;
 }
 
-h3, 
+h3,
 .gamma {
 	font-size: 1.3em;
 	line-height: 1em;
@@ -91,7 +92,7 @@ h3,
 	margin-bottom: 0.3em;
 }
 
-h4, 
+h4,
 .delta{
 	font-size: 1em;
 	line-height: 1.6em;
@@ -99,7 +100,7 @@ h4,
 	margin-bottom: 0em;
 }
 
-h5, 
+h5,
 .epsilon {
 	font-size: 1em;
 	line-height: 1.6em;
@@ -192,7 +193,7 @@ li {
 }
 
 nav {
-	ol, 
+	ol,
 	ul {
 		margin: 0;
 		padding: 0;
