--- a/_sass/utilities/_mixins.scss
+++ b/_sass/utilities/_mixins.scss
@@ -12,27 +12,27 @@
 @mixin breakpoint($viewport) {
 	// extra large
 	@if $viewport == xl {
-		@media screen and (min-width: $breakpoint-xl) { 				
-			@content; 
+		@media screen and (min-width: $breakpoint-xl) {
+			@content;
 		}
 	}
 
 	// large
 	@if $viewport == lg {
-		@media screen and (min-width: $breakpoint-lg) { 				
-			@content; 
+		@media screen and (min-width: $breakpoint-lg) {
+			@content;
 		}
 	}
 	// medium
 	@else if $viewport == md {
-		@media screen and (min-width: $breakpoint-md) { 
-			@content; 
+		@media screen and (min-width: $breakpoint-md) {
+			@content;
 		}
 	}
 	// small
 	@else if $viewport == sm {
 		@media screen and (min-width: $breakpoint-sm)  {
-			@content; 
+			@content;
 		}
 	}
 }
@@ -41,15 +41,18 @@
 
 // mixin for slide up animation
 @mixin slide-up($offset, $duration, $delay) {
-	opacity: 0;
-	transform: translate3d(0, $offset, 0);
+	.js & {
+		opacity: 0;
+		transform: translate3d(0, $offset, 0);
 
-	@keyframes slide-up{
-		0% 		{ transform: translate3d(0, $offset, 0); opacity: 0; }
-		100%	{ transform: none; opacity: 1; }
-	}
-	&.animate {
-		animation: slide-up $duration $delay both cubic-bezier(.4,0,.2,1);		  
+		@keyframes slide-up{
+			0% 		{ transform: translate3d(0, $offset, 0); opacity: 0; }
+			100%	{ transform: none; opacity: 1; }
+		}
+
+		&.animate {
+			animation: slide-up $duration $delay both cubic-bezier(.4,0,.2,1);
+		}
 	}
 }
 
