--- a/_sass/utilities/_mixins.scss
+++ b/_sass/utilities/_mixins.scss
@@ -41,17 +41,21 @@
 
 // mixin for slide up animation
 @mixin slide-up($offset, $duration, $delay) {
-	.js & {
-		opacity: 0;
-		transform: translate3d(0, $offset, 0);
+	opacity: 0;
+	transform: translate3d(0, $offset, 0);
 
-		@keyframes slide-up{
-			0% 		{ transform: translate3d(0, $offset, 0); opacity: 0; }
-			100%	{ transform: none; opacity: 1; }
-		}
-
+	@keyframes slide-up{
+		0% 		{ transform: translate3d(0, $offset, 0); opacity: 0; }
+		100%	{ transform: none; opacity: 1; }
+	}
+	&.animate {
+		animation: slide-up $duration $delay both cubic-bezier(.4,0,.2,1);
+	}
+	.no-js & {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
 		&.animate {
-			animation: slide-up $duration $delay both cubic-bezier(.4,0,.2,1);
+			animation: none;
 		}
 	}
 }
