--- a/_sass/base/_base-variables.scss
+++ b/_sass/base/_base-variables.scss
@@ -2,7 +2,7 @@
 ---------------------------------*/
 // color palette
 $teal:          #b2f6eb;
-$pink:          #ffdcd0;
+$pink:          #f9d2d1;
 $blue:          #1F2677;
 $blue-soft:     #415892;
 $white:         #fff;
@@ -14,7 +14,7 @@ $gray-darker:   #252633;
 
 // color usage
 $bg-color:      #fff;
-$brand-color:   $teal;
+$brand-color:   $pink;
 $text-color:    darken($blue, 12%);
 
 // font properties
