--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta http-equiv="cleartype" content="on">
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}?{{ site.time | date: '%s' }}">
+    <script src="{{ "/js/modernizr-custom.js" | prepend: site.baseurl }}?{{ site.time | date: '%s' }}"></script>
  	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
  	<link rel="alternate" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" type="application/rss+xml" title="{{ site.title }}">
 	<link rel="shortcut icon" href="{{ "/favicon.ico" | prepend: site.baseurl }}">
